Changelog 1. Updated dependencies 2. Removed react preset form eslint config 3. Added webpack dev server

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,6 @@
     },
     "parser": "babel-eslint",
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
         "sourceType": "module"
     },
     "rules": {
@@ -33,7 +30,6 @@
         "no-mixed-spaces-and-tabs":"warn"
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "eslint:recommended"
       ]
 }
