--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "simple-html-project-starter-kit",
   "scripts": {
-    "start": "webpack --env.NODE_ENV=development --watch -d",
+    "start": "webpack-dev-server --env.NODE_ENV=development -d",
     "build": "webpack --env.NODE_ENV=production --progress -p",
     "analyze": "webpack --env.NODE_ENV=production --env.ANALYZE_BUNDLE=true --progress -p"
   },
-  "browserslist": ["> 1%", "last 2 versions"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
+    "autoprefixer": "^8.3.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
@@ -17,12 +20,13 @@
     "file-loader": "^1.1.11",
     "node-sass": "^4.7.2",
     "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.1",
-    "sass-loader": "^6.0.7",
+    "postcss-loader": "^2.1.4",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "webpack": "^4.1.1",
+    "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.12"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
