--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "simple-html-project-starter-kit",
   "scripts": {
-    "start": "webpack-dev-server --env.NODE_ENV=development -d",
-    "build": "webpack --env.NODE_ENV=production --progress -p",
-    "analyze": "webpack --env.NODE_ENV=production --env.ANALYZE_BUNDLE=true --progress -p"
+    "start": "webpack-serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js --progress --env",
+    "analyze": "webpack --config webpack.prod.js --progress --env.ANALYZE_BUNDLE=true"
   },
   "browserslist": [
     "> 1%",
@@ -15,6 +15,7 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
@@ -27,6 +28,7 @@
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-hot-client": "^3.0.0",
+    "webpack-serve": "^1.0.2"
   }
 }
