--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "simple-html-project-starter-kit",
   "scripts": {
     "start": "webpack-serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js --progress --env",
-    "analyze": "webpack --config webpack.prod.js --progress --env.ANALYZE_BUNDLE=true"
+    "build": "webpack --config webpack.prod.js -p --progress --env",
+    "analyze": "webpack --config webpack.prod.js -p --progress --env.ANALYZE_BUNDLE=true"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
   ],
   "devDependencies": {
-    "autoprefixer": "^8.5.1",
+    "autoprefixer": "^8.6.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
@@ -22,13 +22,13 @@
     "node-sass": "^4.9.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.0.2",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.9.1",
+    "webpack": "^4.11.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.4",
-    "webpack-hot-client": "^3.0.0",
+    "webpack-cli": "^3.0.2",
+    "webpack-hot-client": "^4.0.2",
     "webpack-serve": "^1.0.2"
   }
 }
