--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "autoprefixer": "^8.6.0",
+    "autoprefixer": "^8.6.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
-    "sass-loader": "^7.0.2",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.11.0",
+    "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.2",
-    "webpack-hot-client": "^4.0.2",
-    "webpack-serve": "^1.0.2"
+    "webpack-cli": "^3.0.3",
+    "webpack-hot-client": "^4.0.3",
+    "webpack-serve": "^1.0.4"
   }
 }
