--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "simple-html-project-starter-kit",
   "scripts": {
-    "start": "webpack-serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js -p --progress --env",
-    "analyze": "webpack --config webpack.prod.js -p --progress --env.ANALYZE_BUNDLE=true"
+    "start": "webpack-serve",
+    "build": "webpack -p --progress --env",
+    "analyze": "webpack -p --progress --env.ANALYZE_BUNDLE=true"
   },
   "browserslist": [
     "> 1%",
@@ -32,6 +32,7 @@
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.8",
     "webpack-hot-client": "^4.0.4",
+    "webpack-merge": "^4.1.3",
     "webpack-serve": "^1.0.4"
   }
 }
