Changelog 1. Modify Babel Env Preset preferences 2. Add Browsersync on top of webpack serve 3. Add Static folder and Copy Webpack Plugin to handle ity

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     [
       "env",
       {
-        "targets": ["last 2 versions"],
+        "targets": ["> 1%", "last 2 versions"],
         "node": "current"
       }
     ]
