Changelog 1. Change indentation to tabs 2. Add Cross Env to handle env variables

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
             "error",            
             "double"
         ],
-        "indent": ["error", 2],
+        "indent": ["error", "tab"],
         "semi":"warn",
         "no-mixed-spaces-and-tabs":"warn"
     },
