--- a/package.json
+++ b/package.json
@@ -3,38 +3,42 @@
   "scripts": {
     "start": "webpack-serve",
     "build": "webpack -p --progress --env",
-    "analyze": "webpack -p --progress --env.ANALYZE_BUNDLE=true"
+    "analyze": "cross-env ANALYZE_BUNDLE=true webpack -p --progress"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
   ],
   "devDependencies": {
-    "autoprefixer": "^8.6.4",
+    "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.5",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^0.28.10",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.1.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.13.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.13.0",
+    "webpack": "^4.15.1",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.8",
-    "webpack-hot-client": "^4.0.4",
+    "webpack-hot-client": "^4.1.0",
     "webpack-merge": "^4.1.3",
-    "webpack-serve": "^1.0.4"
+    "webpack-serve": "^2.0.0"
   }
 }
