--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "ejs": "^2.6.1",
+    "ejs-html-loader": "^3.1.0",
     "eslint": "^5.3.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.14.0",
