--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
-        "targets": ["> 1%", "last 2 versions"],
-        "node": "current"
+        "targets": [
+          "> 1%",
+          "last 2 versions"
+        ]
       }
     ]
   ]
